# ChangeLog for net-analyzer/nagios-nrpe
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.32 2006/07/06 06:26:46 corsair Exp $

  06 Jul 2006; Markus Rothe <corsair@gentoo.org> nagios-nrpe-2.5.1.ebuild:
  Stable on ppc64

  04 Jul 2006; Lance Albertson <ramereth@gentoo.org> +files/nrpe-2.5.2:
  * Add init script (forgot it before!)

*nagios-nrpe-2.5.2 (04 Jul 2006)

  04 Jul 2006; Lance Albertson <ramereth@gentoo.org> -files/nrpe-2.0,
  -files/nrpe-2.0.cfg, -nagios-nrpe-2.0.ebuild, -nagios-nrpe-2.0-r1.ebuild,
  nagios-nrpe-2.5.1.ebuild, +nagios-nrpe-2.5.2.ebuild:
  * Version bump
  * Marked 2.5.1 stable on x86
  * Removed old ebuilds/files

  07 May 2006; Markus Rothe <corsair@gentoo.org> nagios-nrpe-2.3.ebuild:
  Stable on ppc64

  05 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  nagios-nrpe-2.3.ebuild:
  Stable on sparc wrt security #132159

*nagios-nrpe-2.5.1 (27 Apr 2006)

  27 Apr 2006; Lance Albertson <ramereth@gentoo.org> +files/nrpe-2.5.1,
  nagios-nrpe-2.3.ebuild, +nagios-nrpe-2.5.1.ebuild:
  * Version bump
  * Added reload to init script (2.5.1 added this feature)
  * Stable on x86 (2.3)

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> nagios-nrpe-2.0-r1.ebuild:
  stable on amd64

*nagios-nrpe-2.3 (04 Feb 2006)

  04 Feb 2006; Lance Albertson <ramereth@gentoo.org> +files/nrpe-2.3,
  metadata.xml, +nagios-nrpe-2.3.ebuild:
  * Version bump

  20 Nov 2005; Lance Albertson <ramereth@gentoo.org>
  nagios-nrpe-2.0-r1.ebuild:
  * Clean up how the binaries are installed in the ebuild

  07 Oct 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  nagios-nrpe-2.0-r1.ebuild:
  Stable on sparc

  09 Sep 2005; Lance Albertson <ramereth@gentoo.org>
  nagios-nrpe-2.0-r1.ebuild:
  * Marked stable on x86

*nagios-nrpe-2.0-r1 (10 Jul 2005)

  10 Jul 2005; Lance Albertson <ramereth@gentoo.org>
  +nagios-nrpe-2.0-r1.ebuild:
  * Added configure option for command-args