@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-nsca
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nsca/ChangeLog,v 1.20 2006/07/06 06:27:30 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nsca/ChangeLog,v 1.21 2006/08/17 20:58:59 gustavoz Exp $
+
+  17 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  nagios-nsca-2.6.ebuild:
+  Stable on sparc
 
   06 Jul 2006; Markus Rothe <corsair@gentoo.org> nagios-nsca-2.6.ebuild:
   Stable on ppc64
