@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-nrpe
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.32 2006/07/06 06:26:46 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-nrpe/ChangeLog,v 1.33 2006/08/17 20:59:44 gustavoz Exp $
+
+  17 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  nagios-nrpe-2.5.1.ebuild:
+  Stable on sparc
 
   06 Jul 2006; Markus Rothe <corsair@gentoo.org> nagios-nrpe-2.5.1.ebuild:
   Stable on ppc64
